--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -30,7 +30,7 @@ on:
         type: boolean
       opentofu:
         description: Run OpenTofu (Terraform/HCL/OpenTofu linter)
-        default: true
+        default: false
         type: boolean
       shellcheck:
         description: Run shellcheck (shell script linter)
@@ -128,13 +128,19 @@ jobs:
       - uses: DavidAnson/markdownlint-cli2-action@v16
   opentofu:
     runs-on: ubuntu-latest
-    if: ${{ inputs.opentofu || true }}
+    if: ${{ inputs.opentofu || false }}
     steps:
       - uses: actions/checkout@v4
       - uses: opentofu/setup-opentofu@v1
       - name: OpenTofu fmt
         id: fmt
-        run: tofu fmt -check
+        run: tofu fmt -check -diff -recursive
+  shellcheck:
+    runs-on: ubuntu-latest
+    if: ${{ inputs.shellcheck || true }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ludeeus/action-shellcheck@2.0.0
   taplo:
     runs-on: ubuntu-latest
     if: ${{ inputs.taplo || true }}
@@ -152,12 +158,6 @@ jobs:
           chmod +x ./taplo
           ./taplo format --check --diff
           ./taplo check --default-schema-catalogs
-  shellcheck:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.shellcheck || true }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ludeeus/action-shellcheck@2.0.0
   yamllint:
     runs-on: ubuntu-latest
     if: ${{ inputs.yamllint || true }}
