--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,9 @@
 #:schema https://mise.jdx.dev/schema/mise.json
 
+[plugins]
+	butane = "https://github.com/Okeanos/asdf-butane"
+	taplo = "https://github.com/Okeanos/asdf-taplo"
+
 # See https://github.com/mise-plugins/registry for what is officially available
 # Everything else is just declared as a reference to keep track of it.
 [tools]
