--- a/.mise.toml
+++ b/.mise.toml
@@ -4,7 +4,7 @@
 	butane = "https://github.com/Okeanos/asdf-butane"
 	taplo = "https://github.com/Okeanos/asdf-taplo"
 
-# See https://github.com/mise-plugins/registry for what is officially available
+# See https://github.com/jdx/mise/blob/main/registry.toml for what is officially available
 # Everything else is just declared as a reference to keep track of it.
 [tools]
 	butane = "0.22.0"
