--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -145,7 +145,7 @@ jobs:
           restore-keys: cache-lychee-
       - uses: lycheeverse/lychee-action@1d97d84f0bc547f7b25f4c2170d87d810dc2fb2c # v2.4.0
         with:
-          fail: true
+          fail: false
           format: markdown
           jobSummary: true
           lycheeVersion: v${{ steps.tool-versions.outputs.lychee_version }}
