--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -143,13 +143,14 @@ jobs:
           path: .lycheecache
           key: cache-lychee-${{ github.sha }}
           restore-keys: cache-lychee-
-      - uses: lycheeverse/lychee-action@1d97d84f0bc547f7b25f4c2170d87d810dc2fb2c # v2.4.0
+      - uses: lycheeverse/lychee-action@82202e5e9c2f4ef1a55a3d02563e1cb6041e5332 # v2.4.1
         with:
           fail: false
+          failIfEmpty: false
           format: markdown
           jobSummary: true
           lycheeVersion: v${{ steps.tool-versions.outputs.lychee_version }}
-          args: "--base . --cache --max-cache-age 1d ."
+          args: "--base . --cache --max-cache-age 21d ."
   markdownlint:
     runs-on: ubuntu-latest
     if: ${{ inputs.markdownlint || true }}
