--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -47,14 +47,16 @@ permissions:
 
 # Cancel duplicate runs for this workflow if they happen for the same commit
 # Thus should help with duplicate runs caused by PRs, e.g. because of Renovate
+# See https://github.com/orgs/community/discussions/181292 for limitations
+# See https://github.com/orgs/community/discussions/57827 for workarounds for PR/Branch-Push duplication workarounds
 concurrency:
   group: ${{ github.workflow }}-${{ github.sha }}
   cancel-in-progress: true
 
 jobs:
   butane:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.butane || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.butane || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Extract Tool Versions
@@ -84,8 +86,8 @@ jobs:
             ./scripts/test.sh --bu-file "${file}"
           done
   editorconfig:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.editorconfig || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.editorconfig || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Extract Tool Versions
@@ -106,8 +108,8 @@ jobs:
           tar -xzf editorconfig.tar.gz bin/ec-linux-amd64
           ./bin/ec-linux-amd64 -f github-actions
   gitleaks:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.gitleaks || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.gitleaks || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Extract Tool Versions
@@ -128,8 +130,8 @@ jobs:
           tar -xzf gitleaks.tar.gz gitleaks
           ./gitleaks dir --verbose --redact .
   lychee:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.lychee || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.lychee || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Extract Tool Versions
@@ -152,14 +154,14 @@ jobs:
           lycheeVersion: v${{ steps.tool-versions.outputs.lychee_version }}
           args: "--base . --cache --max-cache-age 21d ."
   markdownlint:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.markdownlint || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.markdownlint || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - uses: DavidAnson/markdownlint-cli2-action@07035fd053f7be764496c0f8d8f9f41f98305101 # v22.0.0
   shellcheck:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.shellcheck || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.shellcheck || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Extract Tool Versions
@@ -171,8 +173,8 @@ jobs:
         with:
           version: v${{ steps.tool-versions.outputs.shellcheck_version }}
   taplo:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.taplo || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.taplo || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Extract Tool Versions
@@ -195,8 +197,8 @@ jobs:
           ./taplo format --check --diff
           ./taplo check --default-schema-catalogs
   yamllint:
-    runs-on: ubuntu-latest
-    if: ${{ inputs.yamllint || true }}
+    runs-on: ubuntu-slim
+    if: ${{ inputs.yamllint || true }} && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name)
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Run yamllint
